--- a/pixelate.html
+++ b/pixelate.html
@@ -4,11 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assig 3</title>
-
+    <title>Assig 4</title>
     <link rel="stylesheet" href="style.css">
     <script src="pixelate-scripts.js"></script>
   </head>
   <body>
+      <h1> Pixelate </h1>
+      <table>
+          <thead>
+              <tr>
+                  <th colspan="2">The table header</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                  <td>The table body</td>
+                  <td>with two columns</td>
+              </tr>
+              <tr>
+                  <td>The table body</td>
+                  <td>with two columns</td>
+              </tr>
+          </tbody>
+      </table>
+
   </body>
 </html>
