--- a/pixelate.html
+++ b/pixelate.html
@@ -10,9 +10,13 @@
   </head>
   <body>
       <h1> Pixelate </h1>
-      <table>
+        <button class="insertRow" id="rowPlus">+</button>
+        <button class="subRow" id="rowMinus">-</button><br>
+        <button class="insertCol" id="colPlus">+</button>
+        <button class="subCol" id="colMinus">-</button>
+      <table id="table-matrix">
           <thead>
-              <tr>
+              <tr>  
                   <th colspan="2">The table header</th>
               </tr>
           </thead>
