--- a/pixelate.html
+++ b/pixelate.html
@@ -10,23 +10,11 @@
   </head>
   <body>
       <h1> Pixelate </h1>
-      <table>
-          <thead>
-              <tr>
-                  <th colspan="2">The table header</th>
-              </tr>
-          </thead>
+      <table id="pixel-matrix">
           <tbody>
-              <tr>
-                  <td>The table body</td>
-                  <td>with two columns</td>
-              </tr>
-              <tr>
-                  <td>The table body</td>
-                  <td>with two columns</td>
-              </tr>
+              <tr> <td> </td> <td> </td> </tr>
+              <tr> <td> </td> <td> </td> </tr>
           </tbody>
       </table>
-
   </body>
 </html>
