edited button styles

--- a/pixelate.html
+++ b/pixelate.html
@@ -19,8 +19,8 @@
 
 
         <div class="dropdown">
-          Colors: <button onclick="dropDown()" class="dropDownButton">Colors</button>
-            <div id="dropdownContent" class="dropdownContent">
+          Colors: <button onclick="dropdown()" class="dropdownButton">Colors</button>
+            <div id="dropdownContent" class="dropdown-content">
               <a href="#red">Red</a>
               <a href="#blue">Blue</a>
               <a href="#yellow">Yellow</a>
