more button changes

--- a/pixelate.html
+++ b/pixelate.html
@@ -30,6 +30,7 @@
             </div>
         </div>
       <table id="pixel-matrix">
+          <!-- don't need this part 
           <thead>
               <tr>
                   <th colspan="2">The table header</th>
@@ -38,7 +39,7 @@
           <tbody>
               <tr> <td> </td> <td> </td> </tr>
               <tr> <td> </td> <td> </td> </tr>
-          </tbody>
+          </tbody> -->
       </table>
       <button onclick="fillCells()" class="fillCells">Fill All Cells</button>
       <button onclick="fillUncoloredCells()" class="fillUncoloredCells">Fill Uncolored Cells</button>
