cells change to color on menu onclick

--- a/pixelate.html
+++ b/pixelate.html
@@ -16,19 +16,17 @@
         Columns:
         <button class="insertCol" id="addCol" onclick="addCol()">+</button>
         <button class="deleteCol" id="deleteCol" onclick="deleteCol()">-</button><br>
+        Colors:
+        <select id="dropdownColors">
+          <option value="red">Red</option>
+          <option value="blue">Blue</option>
+          <option value="yellow">Yellow</option>
+          <option value="purple">Purple</option>
+          <option value="green">Green</option> 
+          <option value="orange">Orange</option>
+          <option value="grey">Grey</option>
+        </select>
 
-
-        <div class="dropdown">
-          Colors: <button onclick="dropdown()" class="dropdownButton">Colors</button>
-            <div id="dropdownContent" class="dropdown-content">
-              <a href="#red">Red</a>
-              <a href="#blue">Blue</a>
-              <a href="#yellow">Yellow</a>
-              <a href="#purple">Purple</a>
-              <a href="#green">Green</a>
-              <a href="#orange">Orange</a>
-            </div>
-        </div>
       <table id="pixel-matrix">
       </table>
 
