--- a/pixelate.html
+++ b/pixelate.html
@@ -32,7 +32,7 @@
 
       <button onclick="fillCells()" class="fillCells">Fill All Cells</button>
       <button onclick="fillUncoloredCells()" class="fillUncoloredCells">Fill Uncolored</button>
-      <button onclick="clear()" class="clear" class="clear">Clear</button>
+      <button onclick="clearAllCells()" class="clear" class="clear">Clear</button>
 
       <script src="pixelate-scripts.js"></script>
   </body>
